# gorillatasks

./: .gitignore  .replit  Pasted--Gorilla-Tasks-python-m-unittest-tests-test-task-actions-py-v-2024-12-18-02-19-47-856-app-I-1734488433724.txt  Pasted--Gorilla-Tasks-python-m-unittest-tests-test-task-actions-py-v-2024-12-18-02-21-32-899-app-I-1734488516080.txt  Pasted--Gorilla-Tasks-python-m-unittest-tests-test-task-actions-py-v-2024-12-18-02-22-51-889-app-I-1734488596724.txt  Pasted--Gorilla-Tasks-python-m-unittest-tests-test-task-actions-py-v-2024-12-18-02-29-08-480-app-I-1734488978362.txt  Pasted--Gorilla-Tasks-python-m-unittest-tests-test-task-actions-py-v-2024-12-18-02-44-32-739-app-I-1734489905118.txt  Pasted--This-file-is-auto-generated-from-the-current-state-of-the-database-Instead-of-editing-this-fil-1734459275902.txt  Pasted-2024-12-18-02-41-11-667-app-INFO-Registered-blueprints-auth-curriculum-dashboard-2024-12-1-1734489684228.txt  Pasted-Ah-for-a-Flask-Python-application-with-SQLAlchemy-here-s-a-different-architectural-approach-for-im-1734479016079.txt  Pasted-AttributeError-AttributeError-CurriculumForm-object-has-no-attribute-public-Traceback-most-1734460343579.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-archive-index--1734493652883.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-dashboard-togg-1734462160688.txt  Pasted-NameError-NameError-name-study-days-is-not-defined-Traceback-most-recent-call-last-File--1734671982709.txt  README.md  add_enrolled_at.py  app.py  (+42 more)
(+118 files in other folders)
